--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "dashify": "^2.0.0",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
