--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.3",
     "bcrypt": "^5.1.1",
     "dashify": "^2.0.0",
     "dotenv": "^16.4.5",
