--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "dashify": "^2.0.0",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
